--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,4 +19,11 @@
   &:hover {
     background-color: aquamarine;
   }
+
+  @media screen and (min-width: 768px) {
+    color: white;
+  }
+  @media screen and (min-width: 1200px) {
+    color: black;
+  }
 }
