--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,7 +18,7 @@ $standart_color: yellow;
   color: black;
   text-decoration: none;
   text-transform: none;
-  // text-align: center;
+  
   background-color: none;
   transition: all 1s ease;
   &:hover {
@@ -29,6 +29,7 @@ $standart_color: yellow;
     color: white;
   }
   @media screen and (min-width: 1200px) {
-    color: black;
+    color: rgb(228, 0, 0);
   }
 }
+
