--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,18 @@
-:root {
-  --stand:red;
+@charset "UTF-8";
+* {
+  margin: 0;
+  padding: 0;
 }
 
-#a {
-  color: var(--stand);
-}
-#a #b {
-  color: blue;
-}
-#a #b #c span {
-  color: yellow;
+ul {
+  list-style: none; /* Убирает маркеры списка */
+  padding: 0;
+  margin: 0;
 }
 
-.link {
-  color: black;
-  text-decoration: none;
-  text-transform: none;
-  background-color: none;
-  transition: all 1s ease;
-}
-.link:hover {
-  background-color: aquamarine;
-}
-@media screen and (min-width: 768px) {
-  .link {
-    color: white;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .link {
-    color: rgb(228, 0, 0);
-  }
+li {
+  display: inline-block; /* Закрепляет элементы в ряд */
+  width: 25%; /* Распределяет ширину на 4 элемента */
+  box-sizing: border-box; /* Включает учет padding и border в ширину */
+  text-align: center; /* Выравнивание текста по центру (по желанию) */
 }
