--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,35 +1,17 @@
-$assent-color: blue;
-$standart_color: yellow;
-:root{
-    --stand:red;
+*{
+  margin: 0;
+  padding: 0;
+  // box-sizing: border-box;
 }
-#a {
-    color: /*$standart_color*/ var(--stand);
-  // background-color: aqua;
-  #b {
-    color: $assent-color;
-    #c span {
-      color: $standart_color;
-    }
-  }
+ul {
+  list-style: none; /* Убирает маркеры списка */
+  padding: 0;
+  margin: 0;
 }
 
-.link {
-  color: black;
-  text-decoration: none;
-  text-transform: none;
-  
-  background-color: none;
-  transition: all 1s ease;
-  &:hover {
-    background-color: aquamarine;
-  }
-
-  @media screen and (min-width: 768px) {
-    color: white;
-  }
-  @media screen and (min-width: 1200px) {
-    color: rgb(228, 0, 0);
-  }
+li {
+  display: inline-block; /* Закрепляет элементы в ряд */
+  width: 25%; /* Распределяет ширину на 4 элемента */
+  box-sizing: border-box; /* Включает учет padding и border в ширину */
+  text-align: center; /* Выравнивание текста по центру (по желанию) */
 }
-
