--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,7 +49,6 @@ ul {
 body {
   background: #f5f4fa;
 }
-
 .card {
   border-radius: 0px 0px 4px 4px;
   background: #fff;
@@ -64,8 +63,7 @@ body {
 
   @media (min-width: 770px) {
     width: 354px;
-    display: inline-block;
+    display: flex;
     // flex-shrink: 0;
   }
-
 }
