--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,11 @@ body {
 @media (min-width: 770px) {
   .card {
     width: 354px;
-    display: flex;
+    display: inline-block;
+  }
+}
+@media (min-width: 1200px) {
+  .card {
+    width: 270px;
   }
 }
