--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,16 @@
 $white: #fff;
 $black: #000;
 
-*{
+* {
   margin: 0;
   padding: 0;
   border: 0;
   box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+}
+ul,
+ol {
+  list-style: none;
 }
