--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,21 @@ ol {
   justify-content: center;
   align-items: center;
 }
+
+.buta {
+  color: #fff;
+  background-color: #000;
+  border: 10px solid black;
+  font-size: 20px;
+  font-weight: 900;
+  padding: 20px 30px;
+}
+
+.butb {
+  color: #fff;
+  background-color: #000;
+  border: 100px solid rgba(71, 71, 71, 0.489);
+  font-size: 20px;
+  font-weight: 900;
+  padding: 20px 30px;
+}
