--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,8 @@
 $white: #fff;
 $black: #000;
 
-@import "./reset.scss";
+@import "./utils/reset.scss";
 @import "./utils/mixins";
 @import "./layout/_header.scss";
+@import "./components/buttons";
 // деректива робить так шоб код звітси був і там і тут
