--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -4,3 +4,12 @@
     justify-content: center;
     align-items: center;
 }
+
+@mixin buttonBorder($border){
+    color: #fff;
+    background-color: #000;
+    border: $border;
+    font-size: 20px;
+    font-weight: 900;
+    padding: 20px 30px;
+}
