.buta {   @include buttonBorder(10px solid black, 10000px); } .butb {   @include buttonBorder(100px solid rgba(71, 71, 71, 0.489), 30px); }

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ ol {
   font-size: 20px;
   font-weight: 900;
   padding: 20px 30px;
+  border-radius: 10000px;
 }
 
 .butb {
@@ -36,4 +37,5 @@ ol {
   font-size: 20px;
   font-weight: 900;
   padding: 20px 30px;
+  border-radius: 30px;
 }
