--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,35 +1,6 @@
-$assent-color: blue;
-$standart_color: yellow;
-:root{
-    --stand:red;
-}
-#a {
-    color: /*$standart_color*/ var(--stand);
-  // background-color: aqua;
-  #b {
-    color: $assent-color;
-    #c span {
-      color: $standart_color;
-    }
-  }
-}
-
-.link {
-  color: black;
-  text-decoration: none;
-  text-transform: none;
-  
-  background-color: none;
-  transition: all 1s ease;
-  &:hover {
-    background-color: aquamarine;
-  }
-
-  @media screen and (min-width: 768px) {
-    color: white;
-  }
-  @media screen and (min-width: 1200px) {
-    color: rgb(228, 0, 0);
-  }
-}
-
+@import "./layout/header";
+@import "./utils/reset";
+@import './utils/root';
+@import './layout/base-styles';
+@import './layout/hero';
+@import './layout/about-us';
