--- a/css/style.css
+++ b/css/style.css
@@ -447,3 +447,90 @@ p::first-letter {
   background-color: blue;
   border-radius: 50%;
 }
+
+.img-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  height: auto;
+}
+
+.about-us__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 194px;
+}
+
+.miha {
+  width: 90%;
+  height: 90%;
+}
+
+.card {
+  align-items: center;
+  margin-left: 10px;
+}
+
+.name {
+  color: #000000;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.48px;
+}
+
+.who-is-he {
+  color: #757575;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.48px;
+}
+
+body {
+  background: #f5f4fa;
+}
+
+.card {
+  border-radius: 0px 0px 4px 4px;
+  background: #fff;
+  /* material shadow v1 */
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  margin-bottom: 30px;
+  align-items: center;
+  width: auto;
+}
+@media (min-width: 770px) {
+  .card {
+    width: 354px;
+    display: inline-block;
+  }
+}
+@media (min-width: 1200px) {
+  .card {
+    width: 270px;
+  }
+}
+
+.twitter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 34px;
+}
+
+.twitter-list {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin-left: 25%;
+}
