--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,3 @@
-@import "./layout/header";
 @import "./utils/reset";
 @import './utils/root';
-@import './layout/base-styles';
-@import './layout/hero';
-@import './layout/about-us';
+// @import './layout/about-us';
