--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,1 @@
-@import './components/buttons';
-@import "./utils/reset";
-@import './utils/root';
-// @import './layout/about-us';
-// @import './components/buttons'
-@import './utils/mixins';
-@import './utils/placeholders';
+@import './layaout/header';
