--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   background-position: center;
   background-repeat: no-repeat;
 }
-@media (min-device-pixel-retion: 2) {
+@media (min-device-pixel-retion: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
     padding-top: 175px;
     padding-bottom: 300px;
