--- a/scss/utils/_reset.scss
+++ b/scss/utils/_reset.scss
@@ -1,5 +1,13 @@
-ul,ol{
-    margin: 0;
-    padding: 0;
-    list-style: none;
+ul,
+ol {
+  margin: 0;
+  padding: 10px;
+  list-style: none;
+    display: flex;
+    
 }
+// li {
+//   list-style: none;
+//   margin: 0;
+//   padding: 0;
+// }
