--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,13 +1,26 @@
 .alivio {
   color: #01996d;
+  width: 79.565px;
+  height: 23.04px;
+  // flex-shrink: 0;
 }
-
+li {
+  color: #292929;
+  font-family: Lato;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
 // ul,
 // ol {
 //     // flex-direction: row;
 //     justify-content: space-between;
 // }
-header{
-    display: flex;
-    justify-content: space-between;
+.not-last {
+  margin-right: 10px;
+}
+header {
+  display: flex;
+  justify-content: space-between;
 }
