--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,23 @@ header {
   justify-content: space-between;
 }
 
+.start-free-trial {
+  border-radius: 4px;
+  border: 1px solid #01996d;
+  background: #01996d;
+  display: inline-flex;
+  padding: 3px 40px;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  color: rgb(255, 255, 255);
+}
+
+header {
+  align-items: center;
+  text-align: center;
+}
+
 ul,
 ol {
   margin: 0;
