--- a/scss/layout/_how-it-works.scss
+++ b/scss/layout/_how-it-works.scss
@@ -36,3 +36,12 @@
     // justify-content: start;
     // align-items: center;
 }
+
+// three-steps
+
+.steps{
+    display: flex;
+}
+.step{
+    margin-right: 95px;
+}
