--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,3 @@
-body {
-  height: 100vh;
-}
-
-.div {
-  width: 300px;
-  height: 300px;
-  background-color: red;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.div::after {
-  content: "";
-  display: block;
-  margin-top: 300px;
-  width: 300px;
-  height: 10px;
-  background-color: black;
-}
-
-.text::-moz-selection {
-  color: yellow;
-  background-color: blue;
-}
-
-.text::selection {
-  color: yellow;
-  background-color: blue;
-}
-
-.input:focus {
-  outline: none;
-  border: 10px solid red;
-}
-
-.text::first-line {
-  font-size: 100px;
-}
-
-.text::first-letter {
-  font-size: 120px;
-}
-
-body {
-  font-size: 24px;
-}
-
-html {
-  font-size: 30px;
-}
-
-.text {
-  font-size: -2rem;
-  display: none;
-}
-
-.list {
-  display: flex;
-}
-
-.list-item:not(:last-child) {
-  width: 300px;
-  padding: 20px;
-  border: 5px dotted yellow;
-  margin-top: 10px;
-  margin-right: 20px;
-  margin-bottom: 30px;
-  margin-left: 40px;
-  margin: 15px 20px 30px 40px;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -78,17 +5,40 @@ html {
   box-sizing: border-box;
 }
 
-.hero {
-  padding-top: 175px;
-  padding-bottom: 300px;
-  background-image: url(../../img/hero.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background: url(../../img/hero.jpg) cover/center no-repeat;
+h1, h2, h3, p {
+  color: #fff;
 }
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .hero {
-    background-image: url(../../img/hero-2x.jpg);
-  }
+
+.flexibe-buttons {
+  display: flex;
+}
+
+button {
+  color: #fff;
+}
+button:first-child {
+  width: 236px;
+  padding: 16px 0;
+  border-radius: 30px;
+  background: orange;
+}
+button:last-child {
+  width: 236px;
+  padding: 16px 0;
+  border-radius: 30px;
+  background: transparent;
+  border: 1px solid #fff;
+}
+
+.hero {
+  background: url(../../img/hero-background\ copy.png);
+  padding-top: 80px;
+  padding-bottom: 60px;
+  text-align: center;
+}
+
+.container {
+  width: 800px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
