--- a/scss/components/_list.scss
+++ b/scss/components/_list.scss
@@ -12,8 +12,17 @@
 //   text-align: center;
 // }
 li {
+
+ // width: 370px;
+ // height: 404px;
+  margin-left: 30px;
+  
   width: 370px;
   height: 404px;
+ 
+  border: 1px solid #EEE;
+  background: #FFF;
+  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
 ol,
 ul {
