--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,25 @@ a {
   line-height: 36px; /* 81.818% */
   letter-spacing: 0.1px;
 }
+
+.footer {
+  color: #5c5c5c;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 75px;
+  margin-bottom: 30px;
+  margin-left: 115px;
+}
+
+.copywright {
+  color: #5c5c5c;
+  text-align: right;
+  margin-right: 1045px;
+  width: 1210px;
+  /* Subtitle */
+  font-size: 20px;
+  font-style: normal;
+  line-height: 18px;
+  letter-spacing: 0.1px;
+  align-items: center;
+}
